; ModuleID = '/home/carl/AnghaBench/reactos/dll/3rdparty/libtirpc/src/extr_svc_auth_gss.c_svcauth_gss_get_principal.c'
source_filename = "/home/carl/AnghaBench/reactos/dll/3rdparty/libtirpc/src/extr_svc_auth_gss.c_svcauth_gss_get_principal.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.svc_rpc_gss_data = type { %struct.TYPE_2__ }
%struct.TYPE_2__ = type { i64, i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i8* @svcauth_gss_get_principal(i32* %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca i32*, align 8
  %4 = alloca %struct.svc_rpc_gss_data*, align 8
  %5 = alloca i8*, align 8
  store i32* %0, i32** %3, align 8
  %6 = load i32*, i32** %3, align 8
  %7 = call %struct.svc_rpc_gss_data* @SVCAUTH_PRIVATE(i32* %6)
  store %struct.svc_rpc_gss_data* %7, %struct.svc_rpc_gss_data** %4, align 8
  %8 = load %struct.svc_rpc_gss_data*, %struct.svc_rpc_gss_data** %4, align 8
  %9 = getelementptr inbounds %struct.svc_rpc_gss_data, %struct.svc_rpc_gss_data* %8, i32 0, i32 0
  %10 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %9, i32 0, i32 0
  %11 = load i64, i64* %10, align 8
  %12 = icmp eq i64 %11, 0
  br i1 %12, label %13, label %14

13:                                               ; preds = %1
  store i8* null, i8** %2, align 8
  br label %42

14:                                               ; preds = %1
  %15 = load %struct.svc_rpc_gss_data*, %struct.svc_rpc_gss_data** %4, align 8
  %16 = getelementptr inbounds %struct.svc_rpc_gss_data, %struct.svc_rpc_gss_data* %15, i32 0, i32 0
  %17 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %16, i32 0, i32 0
  %18 = load i64, i64* %17, align 8
  %19 = add i64 %18, 1
  %20 = trunc i64 %19 to i32
  %21 = call i8* @malloc(i32 %20)
  store i8* %21, i8** %5, align 8
  %22 = icmp eq i8* %21, null
  br i1 %22, label %23, label %24

23:                                               ; preds = %14
  store i8* null, i8** %2, align 8
  br label %42

24:                                               ; preds = %14
  %25 = load i8*, i8** %5, align 8
  %26 = load %struct.svc_rpc_gss_data*, %struct.svc_rpc_gss_data** %4, align 8
  %27 = getelementptr inbounds %struct.svc_rpc_gss_data, %struct.svc_rpc_gss_data* %26, i32 0, i32 0
  %28 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %27, i32 0, i32 1
  %29 = load i32, i32* %28, align 8
  %30 = load %struct.svc_rpc_gss_data*, %struct.svc_rpc_gss_data** %4, align 8
  %31 = getelementptr inbounds %struct.svc_rpc_gss_data, %struct.svc_rpc_gss_data* %30, i32 0, i32 0
  %32 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %31, i32 0, i32 0
  %33 = load i64, i64* %32, align 8
  %34 = call i32 @memcpy(i8* %25, i32 %29, i64 %33)
  %35 = load i8*, i8** %5, align 8
  %36 = load %struct.svc_rpc_gss_data*, %struct.svc_rpc_gss_data** %4, align 8
  %37 = getelementptr inbounds %struct.svc_rpc_gss_data, %struct.svc_rpc_gss_data* %36, i32 0, i32 0
  %38 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %37, i32 0, i32 0
  %39 = load i64, i64* %38, align 8
  %40 = getelementptr inbounds i8, i8* %35, i64 %39
  store i8 0, i8* %40, align 1
  %41 = load i8*, i8** %5, align 8
  store i8* %41, i8** %2, align 8
  br label %42

42:                                               ; preds = %24, %23, %13
  %43 = load i8*, i8** %2, align 8
  ret i8* %43
}

declare dso_local %struct.svc_rpc_gss_data* @SVCAUTH_PRIVATE(i32*) #1

declare dso_local i8* @malloc(i32) #1

declare dso_local i32 @memcpy(i8*, i32, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
